code/tui/snapshots/fullscreen/chat_view/configured_statusline_fullscreen.snap
---
source: code/tui/src/app/chat_view_tests.rs
expression: text(&before)
---
   branch-layout /work/ash                                                    [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                                                 
  ──────────────────────────────────────────────────────────────────── Shared model (high) · Plan   
                                                                                                    
  ⏸ Manual
