code/tui/snapshots/fullscreen/chat_view/disabled_statusline_fullscreen.snap
---
source: code/tui/src/app/chat_view_tests.rs
expression: text(&hidden)
---
  /work/ash                                                                            [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                                                 
  ────────────────────────────────────────────────────────────────────────────────────────────────
